<resources>
    <string name="app_name">MetroBankAssignment</string>
    <string name="error_details">Movie Details Error</string>
    <string name="movieitem">movieItem</string>
    <string name="genretitle">Title</string>
    <string name="release_date">Release Date</string>
    <string name="rating">Rating</string>
    <string name="synopsis">Overview :</string>
    <string name="director">Director:</string>
    <string name="writer">Writer:</string>
    <string name="actors">Actors:</string>
</resources>